--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,15 @@ body {
 .drawer-side ul a span {
     @apply hover:text-blue-500
 }
+
+.navbar .menu-sm a {
+    @apply text-center py-1 hover:bg-blue-100 rounded
+}
+
+.navbar-end .login-btn.active {
+    @apply text-blue-500 bg-blue-100
+}
+
+.navbar-end a {
+    @apply py-1 hover:bg-blue-100 rounded hover:text-blue-400
+}
